crates/ruff_linter/src/message/snapshots/ruff_linter__message__grouped__tests__default.snap
---
source: crates/ruff_linter/src/message/grouped.rs
expression: content
---
/projects/project/fib.py:
  1:8 F401 `os` imported but unused
  6:5 F841 Local variable `x` is assigned to but never used

/projects/project/undef.py:
  1:4 F821 Undefined name `a`
