crates/ruff_linter/src/message/snapshots/ruff_linter__message__grouped__tests__syntax_errors.snap
---
source: crates/ruff_linter/src/message/grouped.rs
expression: content
---
/projects/project/syntax_errors.py:
  1:15 SyntaxError: Expected one or more symbol names after import
  3:12 SyntaxError: Expected ')', found newline
